# waterfall-project-management

./: .augmentrules  README.md  setup.md  vscode.md
backend/: .env  Cargo.toml  Dockerfile  docker-entrypoint.sh
backend/db/migrations/: 0_initial_schema.sql  1_create_users.sql  3_create_phase_transitions.sql  4_create_forum_tables.sql  5_update_forum_tables.sql  6_forum_attachments_and_tags.sql
backend/src/: api_docs.rs  errors.rs  main.rs
backend/src/extractors/: auth.rs
backend/src/models/: auth.rs  forum.rs  lifecycle.rs  mod.rs  project.rs  resource.rs  task.rs  user.rs
backend/src/routes/: auth.rs  forum.rs  lifecycle.rs  mod.rs  projects.rs  resources.rs  tasks.rs  users.rs
backend/src/services/: auth_service.rs  forum_service.rs  lifecycle_service.rs  mod.rs  project_service.rs  task_service.rs  user_service.rs
backend/src/tests/: auth_tests.rs  forum_integration_tests.rs  forum_tests.rs  integration_tests.rs  lifecycle_tests.rs  mod.rs  project_tests.rs  task_tests.rs  test_helpers.rs  user_tests.rs
docs/: blueprint.md  spec.md  tech_stack.md
docs/features/: project_checklist.md  tasks.md
docs/iterations/: tasks_v1.md
frontend/: .env  jest.config.ts  jest.setup.ts  next-i18next.config.js  next.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/hooks/: useIsomorphicLayoutEffect.ts  useTasks.ts
frontend/src/pages/: _app.tsx  dashboard.tsx  index.tsx
frontend/src/services/: api.ts  auth.ts  forum.ts  projects.ts
frontend/src/types/: forum.ts  project.ts  task.ts
frontend/src/widgets/: card.tsx
(+18 files in other folders)
