[package]
name = "waterfall-resource-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.7.1"
actix-web-grants = "4.0"
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json","bigdecimal"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.26"
thiserror = "2.0.12"
futures = "0.3.31"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
actix-rt = "2.10.0"
serial_test = "3.2.0"
[dev-dependencies]
mockall = "0.13.1"
assert_matches = "1.5.0"
test-case = "3.3.1"
fake = { version = "4.0.0", features = ["chrono", "uuid"] }
rstest = "0.25.0"
